[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 366.067, 0, 0, 0, 0, 0, 366.067, 276.09, 0, 0, 0, 0, 0.0335195, 276.09, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 180, 135 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -0.032967, 0 )
scale = Vector2( 0.983516, 0.977941 )
curve = SubResource( 1 )

[node name="MobSpawnPosition" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.983516, 0.977941 )
transform = Transform2D( 0.983516, 0, 0, 0.977941, 0, 0 )

[connection signal="die" from="Player" to="." method="game_over"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
